Table: fix spacing td

--- a/scss/base/_table.scss
+++ b/scss/base/_table.scss
@@ -230,7 +230,7 @@ thead th a {
 
 th,
 td {
-  padding: rhythm(0.5) ($grid-gutter-width / 2);
+  padding: .5em .25em;
   border-bottom: 1px solid $color-grey-lighter;
   text-align: left; /* LTR */
 
